--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <body>
     <header>
       <div class="row my-4">
-        <div class="col-3"></div>
+        <div class="col-md-3 col-sm-0 col-0"></div>
         <div
-          class="col-6 d-flex flex-wrap flex-column justify-content-center align-items-center"
+          class="col-md-6 col-sm-12 col-12 d-flex flex-wrap flex-column justify-content-center align-items-center"
         >
           <div
             class="d-flex flex-wrap flex-column justify-content-center align-items-center"
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3"></div>
+        <div class="col-md-3 col-sm-0 col-0"></div>
       </div>
     </header>
     <section></section>
