--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram</title>
+    <meta name="google-site-verification" content="smnlODRPdipv1RPWSN8SmHuPbmdDPxXAaMgSTf2-Zy8" />
 
     <!-- Bootstrap CDN -->
     <link
