--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="./public/styles/ins_style.css" />
+    <meta name="google-site-verification" content="fER_3f9M1cZY5hDlyDn6_T8vGMCN0P-tSR6hO5GeXzk" />
   </head>
   <body>
     <header>
